fix form z-index

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -74,6 +74,10 @@ h1 {
   }
 }
 
+.contact-form {
+  z-index: 10;
+}
+
 // //for marquee text
 // .marquee {
 //   width: 80%;
